docs/snippets/px-central/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: px-central-ui
  namespace: px-central
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: px-central-ui
            port:
              number: 80
